Mudanca de fonte

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang=">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio Yuri Nunes</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/port.css">
 
@@ -37,9 +37,11 @@
 		<div class="row flex" id="row1">
 			<div class="col-lg-8 col-md-8 col-sm-12 " id = "description">
 				<!-- <br> <br> --> 
-				<p>Frontend Developer and soon-to-be Full-Stack Web Dev. Higher Certificate in Computer Science by CCT College and Certificate in Computing and Multimedia by Dorset College, both in Dublin, Ireland. 3 years of expericence with customer service both in English and Portuguese.</p>
+				<p>Desenvolvedor Full-Stack. Fluente em inglês e português com conhecimentos intermediários em espanhol. Higher Certificate (equivalente a tecnólogo no Brasil) em Ciências da Computação pela Faculcade CCT, e Certificado em Computação e Multimídia pela Faculdade Dorset College, ambas em Dublin, Irlanda. 3 anos de experiência em atendimento ao cliente trabalhando como Recepcionista de Hotel, atendendo tanto em inglês quanto em português e eventualmente em espanhol.  </p>
+				<hr class='hr'>
+				<p>Full-Stack Developer. Fluent in English and Portuguese with intermediate Spanish. Higher Certificate in Computer Science from CCT College and Certificate in Computing and Multimedia from Dorset College, both in Dublin, Ireland. 3 years of expericence with customer service both in English and Portuguese, and eventually in Spanish. </p>
 				<hr class="hr">
-				<p>Frontend Web Developer</p>
+				<p>Full-Stack Desenvolvedor Web (MERN)</p>
 			</div>
 			<div id="picture" class="col-lg-4 col-md-4 col-sm-12">
 				<img class="img-fluid" id="myPicture" src="http://i66.tinypic.com/34si2j7.jpg">
