--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 		<div class="row flex" id="row1">
 			<div class="col-lg-8 col-md-8 col-sm-12 " id = "description">
 				<!-- <br> <br> --> 
+				<p id="titulo">Full-Stack Desenvolvedor Web (MERN)</p>
+				<hr class="hr">
 				<p>Desenvolvedor Full-Stack. Fluente em inglês e português com conhecimentos intermediários em espanhol. Higher Certificate (equivalente a tecnólogo no Brasil) em Ciências da Computação pela Faculcade CCT, e Certificado em Computação e Multimídia pela Faculdade Dorset College, ambas em Dublin, Irlanda. 3 anos de experiência em atendimento ao cliente trabalhando como Recepcionista de Hotel, atendendo tanto em inglês quanto em português e eventualmente em espanhol.  </p>
 				<hr class='hr'>
 				<p>Full-Stack Developer. Fluent in English and Portuguese with intermediate Spanish. Higher Certificate in Computer Science from CCT College and Certificate in Computing and Multimedia from Dorset College, both in Dublin, Ireland. 3 years of expericence with customer service both in English and Portuguese, and eventually in Spanish. </p>
-				<hr class="hr">
-				<p>Full-Stack Desenvolvedor Web (MERN)</p>
 			</div>
 			<div id="picture" class="col-lg-4 col-md-4 col-sm-12">
-				<img class="img-fluid" id="myPicture" src="http://i66.tinypic.com/34si2j7.jpg">
+				<img class="img-fluid" id="myPicture" src="http://i64.tinypic.com/33nyl35.jpg">
 			</div>
 		</div>
 	</div>
