Mudancas na parte de contato

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="row flex" id="row1">
 			<div class="col-lg-8 col-md-8 col-sm-12 " id = "description">
 				<!-- <br> <br> --> 
-				<p id="titulo">Full-Stack Desenvolvedor Web (MERN)</p>
+				<p id="titulo">Desenvolvedor Web Full-Stack (MERN)</p>
 				<hr class="hr">
 				<p>Desenvolvedor Full-Stack. Fluente em inglês e português com conhecimentos intermediários em espanhol. Higher Certificate (equivalente a tecnólogo no Brasil) em Ciências da Computação pela Faculcade CCT, e Certificado em Computação e Multimídia pela Faculdade Dorset College, ambas em Dublin, Irlanda. 3 anos de experiência em atendimento ao cliente trabalhando como Recepcionista de Hotel, atendendo tanto em inglês quanto em português e eventualmente em espanhol.  </p>
 				<hr class='hr'>
@@ -53,6 +53,9 @@
 			<div class="sectionHeader">
 				<h2>Portfolio</h2>
 				<span></span>
+				<p>Os projetos abaixo foram desenvolvidos utilizando as seguintes tecnologias: HTML, CSS, JavaScript, React.js, MongoDB, Node.js e Express.js.</p>
+				<br>	
+				<!-- <hr> -->
 			</div>
 			<div class="row flex" id = "portfolioWork">
 				<div class="col-lg-4 col-sm-6">
@@ -83,8 +86,11 @@
 					<h2>Contact Me!</h2>
 					<span></span>
 				</div>
-				<form>
-					<div class="row flex">
+				<div>
+				<p id="contatoTexto">Entrar em contato comigo pelo telefone (ou Whatsapp) (41) 99977-5488 ou no email yurn89@gmail.com casa haja alguma dúvida.</p>
+				</div>
+				<!-- <form>
+					 <div class="row flex">
 						<div class="col-lg-6 col-md-6 col-sm-8 right" id="contactMeForm">
 	       					<div class="form-group">
 	         					<input type="text" class="form-control form-control-lg" placeholder="Your Name" name="">
@@ -93,17 +99,15 @@
 	         					<input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="email">
 	       					</div>
 	      					<div class="form-group">
-	         					<textarea class="form-control form-control-lg">
-	          
-	         					</textarea>
+	         					<textarea class="form-control form-control-lg"></textarea>
 	       					</div>
-	       					<input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+	       					<input type="submit" class="btn btn-secondary btn-block" value="Enviar e-mail" name="">
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-4" id="contactMeP">
-								<p>Please, get in touch if you have any queries.</p>
+								<p>Por favor, entrar em contato caso haja qualquer dúvida.</p>
 							</div>
 					</div>	
-				</form>	
+				</form>	 -->
 			</div>
 		</div>	
 	</div>	
@@ -124,7 +128,7 @@
 
 <div id="copyright" class="shadowEffect">
 	<div>
-	<p>Ynunes © 2018. All Rights Reversed</p>
+	<p> Coded by Yuri Nunes © 2018.</p>
 	</div>	
 </div>
 
