--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<!-- <br> <br> --> 
 				<p id="titulo">Desenvolvedor Web Full-Stack (MERN)</p>
 				<hr class="hr">
-				<p>Desenvolvedor Full-Stack. Fluente em inglês e português com conhecimentos intermediários em espanhol. Higher Certificate (equivalente a tecnólogo no Brasil) em Ciências da Computação pela Faculcade CCT, e Certificado em Computação e Multimídia pela Faculdade Dorset College, ambas em Dublin, Irlanda. 3 anos de experiência em atendimento ao cliente trabalhando como Recepcionista de Hotel, atendendo tanto em inglês quanto em português e eventualmente em espanhol.  </p>
+				<p>Desenvolvedor Full-Stack. Fluente em inglês e português com conhecimentos intermediários em espanhol. Higher Certificate (equivalente a tecnólogo no Brasil) em Ciências da Computação pela Faculcade CCT, e Certificado em Computação e Multimídia pela Faculdade Dorset College, ambas em Dublin, Irlanda. 3 anos de experiência em atendimento ao cliente trabalhando como Recepcionista de Hotel na Irlanda, atendendo tanto em inglês quanto em português e eventualmente em espanhol.  </p>
 				<hr class='hr'>
-				<p>Full-Stack Developer. Fluent in English and Portuguese with intermediate Spanish. Higher Certificate in Computer Science from CCT College and Certificate in Computing and Multimedia from Dorset College, both in Dublin, Ireland. 3 years of expericence with customer service both in English and Portuguese, and eventually in Spanish. </p>
+				<p>Full-Stack Developer. Fluent in English and Portuguese with intermediate Spanish. Higher Certificate in Computer Science from CCT College and Certificate in Computing and Multimedia from Dorset College, both in Dublin, Ireland. 3 years of expericence in Ireland with customer service both in English and Portuguese, and eventually in Spanish as a Hotel Receptionist. </p>
 			</div>
 			<div id="picture" class="col-lg-4 col-md-4 col-sm-12">
 				<img class="img-fluid" id="myPicture" src="http://i64.tinypic.com/33nyl35.jpg">
@@ -89,25 +89,7 @@
 				<div>
 				<p id="contatoTexto">Entrar em contato comigo pelo telefone (ou Whatsapp) (41) 99977-5488 ou no email yurn89@gmail.com casa haja alguma dúvida.</p>
 				</div>
-				<!-- <form>
-					 <div class="row flex">
-						<div class="col-lg-6 col-md-6 col-sm-8 right" id="contactMeForm">
-	       					<div class="form-group">
-	         					<input type="text" class="form-control form-control-lg" placeholder="Your Name" name="">
-	       					</div>
-	       					<div class="form-group">
-	         					<input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="email">
-	       					</div>
-	      					<div class="form-group">
-	         					<textarea class="form-control form-control-lg"></textarea>
-	       					</div>
-	       					<input type="submit" class="btn btn-secondary btn-block" value="Enviar e-mail" name="">
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-4" id="contactMeP">
-								<p>Por favor, entrar em contato caso haja qualquer dúvida.</p>
-							</div>
-					</div>	
-				</form>	 -->
+				<br>
 			</div>
 		</div>	
 	</div>	
@@ -116,19 +98,19 @@
 <div id="socialSection" class="shadowEffect">
 	<div class="row flex" id="social">
 		<div class="col-lg-6 col-md-6 col-sm-12">
-		<p>Developed with Bootstrap, CSS and HTML <br> by Yuri Nunes.</p>
+		<p>Desenvolvido com Bootstrap, CSS and HTML <br> by Yuri Nunes.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-12" id="iconsSocial">
-	    <a href="https://www.instagram.com/yuriramalho"><i class="fab fa-instagram"></i></a>
-	    <a href="https://www.facebook.com/ramalhoyuri"><i class="fab fa-facebook-square"></i></a>
-	    <a href="https://twitter.com/yuriramalho"><i class="fab fa-twitter-square"></i></a>
+	    <a target="_blank" href="https://www.instagram.com/yuriramalho"><i class="fab fa-instagram"></i></a>
+	    <a target="_blank" href="https://www.facebook.com/ramalhoyuri"><i class="fab fa-facebook-square"></i></a>
+	    <a target="_blank" href="https://www.linkedin.com/in/yuri-nunes-2b9820170/"><i class="fab fa-linkedin"></i></a>
 		</div>	
 	</div>
 </div>
 
 <div id="copyright" class="shadowEffect">
 	<div>
-	<p> Coded by Yuri Nunes © 2018.</p>
+	<p> Yuri Nunes © 2018.</p>
 	</div>	
 </div>
 
