Hover effect nas imagens

--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
 				<!-- <hr> -->
 			</div>
 			<div class="row flex" id = "portfolioWork">
-				<div class="col-lg-4 col-sm-6">
-					<a target="_blank" href="img/gallery.jpeg"><img class="img-fluid mx-auto" src="img/gallery.jpeg"></a>
+				<div class="col-lg-4 col-sm-6 bw">
+					<a target="_blank" href="https://glacial-inlet-83147.herokuapp.com/"><img class="img-fluid mx-auto" src="img/yelp-camp.png"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6">
+				<div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/purfectMatch.jpeg"><img class="img-fluid mx-auto" src="img/purfectMatch.jpeg"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6">
+				<div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/gallery.jpeg"><img class="img-fluid mx-auto" src="img/gallery.jpeg"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6">
+				<div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/purfectMatch.jpeg"><img class="img-fluid mx-auto" src="img/purfectMatch.jpeg"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6">
+				<div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/gallery.jpeg"><img class="img-fluid mx-auto" src="img/gallery.jpeg"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6">
+				<div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/purfectMatch.jpeg"><img class="img-fluid mx-auto" src="img/purfectMatch.jpeg"></a>
 				</div>
 			</div>
