correcao de erros

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang=">
+<html>
 <head>
-	<title>Portfolio Yuri Nunes</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Portfolio Yuri Nunes</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
