added link to purfect match and wild gallery

--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
 				<!-- <hr> -->
 			</div>
 			<div class="row flex" id = "portfolioWork">
-				<div class="col-lg-4 col-sm-6 bw">
+				<div class="col-lg-6 col-sm-6 bw">
 					<a target="_blank" href="https://glacial-inlet-83147.herokuapp.com/"><img class="img-fluid mx-auto" src="img/yelp-camp.png"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6 bw">
-					<a target="_blank" href="img/purfectMatch.jpeg"><img class="img-fluid mx-auto" src="img/purfectMatch.jpeg"></a>
+				<div class="col-lg-6 col-sm-6 bw">
+					<a target="_blank" href="https://robo-friends1.herokuapp.com/"><img class="img-fluid mx-auto" src="img/robo-friends.png"></a>
 				</div>
-				<div class="col-lg-4 col-sm-6 bw">
+				<div class="col-lg-6 col-sm-6 bw">
+					<a target="_blank" href="https://github.com/yurinunes/wild-gallery"><img class="img-fluid mx-auto" src="img/wild-gallery.png"></a>
+				</div>
+				<div class="col-lg-6 col-sm-6 bw thumbnail">
+					<a target="_blank" href="https://github.com/yurinunes/purfect-match"><img class="img-fluid mx-auto" src="img/purfect-match.png" ></a>
+				</div>
+				<!-- <div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/gallery.jpeg"><img class="img-fluid mx-auto" src="img/gallery.jpeg"></a>
 				</div>
 				<div class="col-lg-4 col-sm-6 bw">
 					<a target="_blank" href="img/purfectMatch.jpeg"><img class="img-fluid mx-auto" src="img/purfectMatch.jpeg"></a>
-				</div>
-				<div class="col-lg-4 col-sm-6 bw">
-					<a target="_blank" href="img/gallery.jpeg"><img class="img-fluid mx-auto" src="img/gallery.jpeg"></a>
-				</div>
-				<div class="col-lg-4 col-sm-6 bw">
-					<a target="_blank" href="img/purfectMatch.jpeg"><img class="img-fluid mx-auto" src="img/purfectMatch.jpeg"></a>
-				</div>
+				</div> -->
 			</div>
 		</div>	
 	</div>
@@ -83,11 +83,11 @@
 		<div id="contactMe" class="shadowEffect">
 			<div class="container">
 				<div class="sectionHeader">
-					<h2>Contact Me!</h2>
+					<h2>Contato</h2>
 					<span></span>
 				</div>
 				<div>
-				<p id="contatoTexto">Entrar em contato comigo pelo telefone (ou Whatsapp) (41) 99977-5488 ou no email yurn89@gmail.com casa haja alguma dúvida.</p>
+				<p id="contatoTexto">Entrar em contato pelo telefone (ou Whatsapp) (41) 99977-5488 ou no email yurn89@gmail.com. Minha conta no Github possui todos os projetos acima citados.  </p>
 				</div>
 				<br>
 			</div>
@@ -98,16 +98,17 @@
 <div id="socialSection" class="shadowEffect">
 	<div class="row flex" id="social">
 		<div class="col-lg-6 col-md-6 col-sm-12">
-		<p>Desenvolvido com Bootstrap, CSS and HTML <br> by Yuri Nunes.</p>
+		<p>Desenvolvido com Bootstrap, CSS and HTML <br> por Yuri Nunes.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-12" id="iconsSocial">
-	    <a target="_blank" href="https://www.instagram.com/yuriramalho"><i class="fab fa-instagram"></i></a>
-	    <a target="_blank" href="https://www.facebook.com/ramalhoyuri"><i class="fab fa-facebook-square"></i></a>
+		<a target="_blank" href="https://github.com/yurinunes"><i class="fab fa-github-square"></i></a>
 	    <a target="_blank" href="https://www.linkedin.com/in/yuri-nunes-2b9820170/"><i class="fab fa-linkedin"></i></a>
+	    <a target="_blank" href="https://www.facebook.com/ramalhoyuri"><i class="fab fa-facebook-square"></i></a>
+	    <a target="_blank" href="https://www.instagram.com/yuriramalho"><i class="fab fa-instagram"></i></a>
 		</div>	
 	</div>
 </div>
-
+	
 <div id="copyright" class="shadowEffect">
 	<div>
 	<p> Yuri Nunes © 2018.</p>
