--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 			<div class="collapse navbar-collapse " id="navbarSupportedContent">
 	     		<ul class=" nav navbar-nav mt-lg-0" id="navbarRight">
 	       			<li class="nav-item">
-	         			<a class="nav-link" href="#aboutSection">About</a>
+	         			<a class="nav-link" href="#aboutSection">Sobre</a>
 	       			</li>
 	       			<li class="nav-item">
 	         			<a class="nav-link " href="#portfolioSection">Portfolio</a>
 	       			</li>
 	       			<li class="nav-item">
-	         			<a class="nav-link " href="#contactMe">Team</a>
+	         			<a class="nav-link " href="#contactMe">Contato</a>
 	       			</li>
 	     		</ul>
 	   		</div>
