Correcting my profile pic link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p>Full-Stack Developer. Fluent in English and Portuguese with intermediate Spanish. Higher Certificate in Computer Science from CCT College and Certificate in Computing and Multimedia from Dorset College, both in Dublin, Ireland. 3 years of expericence in Ireland with customer service both in English and Portuguese, and eventually in Spanish as a Hotel Receptionist. </p>
 			</div>
 			<div id="picture" class="col-lg-4 col-md-4 col-sm-12">
-				<img class="img-fluid" id="myPicture" src="http://i64.tinypic.com/33nyl35.jpg">
+				<img class="img-fluid" id="myPicture" src="https://image.ibb.co/msd1ez/33nyl35.jpg">
 			</div>
 		</div>
 	</div>
